--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@logicflow/extension": "^2.1.2",
 		"element-plus": "^2.11.1",
 		"monaco-editor": "^0.52.2",
+		"normalize.css": "^8.0.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-java": "^2.7.4",
 		"sass": "^1.92.0",
